--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -5,13 +5,14 @@
 
     {% include meta.html %}
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/cv.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <body>
+    <!--
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
@@ -30,11 +31,11 @@
         </header>
       </div>
     </div>
-
+    -->
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
-
+    <!--
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
@@ -42,7 +43,7 @@
         </footer>
       </div>
     </div>
-
+    -->
     {% include analytics.html %}
   </body>
 </html>
