--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,6 +13,8 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
+$purple: #6b5e9b;
+
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
