--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,7 +17,7 @@ $purple: #6b5e9b;
 
 
 // Font stacks
-$helvetica: Helvetica, Arial, sans-serif;
+$helvetica: "Inter", Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 
