--- a/cv.scss
+++ b/cv.scss
@@ -7,6 +7,10 @@
 
 @import "reset";
 @import "variables";
+@import "inter";
+@import "fira-code";
+@import "devicons";
+@import "material-icons";
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -43,7 +47,7 @@ main {
     padding: 1rem;
     color: $white;
     background-color: $purple;
-    font-family: "FuraCode Nerd Font";
+    font-family: "Fira Code";
 
     section, aside {
       border-bottom: 2px solid $white;
@@ -65,7 +69,7 @@ section, aside {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: $helvetica;
 
   line-height: 1.5;
   margin: 0 0 0.5rem 0;
@@ -111,6 +115,8 @@ ul {
   &.list {
     list-style-type: disc;
     padding-left: 2ch;
+    line-height: 1.25;
+
     &--no-bullets {
       list-style-type: none;
     }
